<resources>
    <string name="app_name">Bestselling Book Watch</string>
    <string name="image_of_bestseller_title_cover">image of %1$s cover</string>
    <string name="review">Click to Read Review</string>
    <string name="categories_label">Bestseller in these Categories:</string>
    <string name="buyLink">Buy on %1$s</string>
    <string name="publisher">Publisher: %1$s</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="cat_select_instructions">Click a category to start selecting up to 7 categories to watch. When you\'re finished, click \'Confirm Selection\'</string>
    <string name="chooser_title">Bestseller Category Chooser</string>
    <string name="about">About</string>
    <string name="choose_categories">Choose Categories</string>
    <string name="no_data">no category data available</string>
    <string name="clear_selection">clear selection</string>
    <string name="book_detail_author">by %s</string>
    <string name="detail_no_review">No Review Found</string>
    <string name="detail_no_browser_avail">No app found to handle viewing this review. Try downloading a browser</string>
    <string name="detail_no_buylink_browser_avail">No app found to handle viewing this link. Try downloading a browser</string>
    <string name="detail_review">NYT Review:\nClick to read review</string>
    <string name="detail_desc">DESCRIPTION:\n%s</string>
    <string name="cat_chooser_size">%s of 7 Categories\nSelected</string>
    <string name="list_update_notification_channel_name" translatable="false">update</string>
    <string name="list_update_notification_channel_id" translatable="false">list update notific channel</string>
    <string name="notification_title">Bestsellers Lists Updated</string>
    <string name="list_update_text">The content of one or more watched categories has been updated</string>
    <string name="network_error">Network unavailable. Try connecting to wifi or mobile network</string>
    <string name="network_exception">network busy: %s, try again in a minute</string>
    <string name="bestsellers_empty">No bestseller data, it\'s either loading, or choose a category to display bestsellers</string>
    <string name="about_details">An app for viewing bestselling lists of book from The New York Times Best Sellers lists. This app is not endorsed or affiliated with The New York Times</string>
    <string name="new_york_times_logo">New York Times logo</string>
</resources>